<resources>
    <string name="app_name">ShelterMe</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to registration -->
    <string name="first_and_last_name">First and Last Name</string>
    <string name="username_or_email">Username (can be same as Email)</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_account_registration">New Account Registration</string>
    <string name="sex">Sex</string>
    <string name="security_question">Security Question</string>
    <string name="email">Email</string>
    <string name="answer">Answer</string>
    <string name="date_of_birth">Month and Year of Birth</string>
    <string name="submit">Submit</string>
    <string name="account_type">Account Type</string>
    <string name="mm_yyyy">MM/YYYY</string>
    <string name="cancel">Cancel</string>
    <string name="name_of_shelter_workplace">Name of Shelter Workplace</string>
    <string name="title_activity_view_shelters_page">ViewSheltersPage</string>
    <string name="title_activity_shelter_details_page">ShelterDetailsPage</string>


    <!-- Strings for describing Shelter details -->
    <string name="address">Address:</string>
    <string name="title_activity_admin_home_page">AdminHomePage</string>
    <string name="title_activity_employee_home_page">EmployeeHomePage</string>
    <string name="title_activity_password_recovery">PasswordRecovery</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="title_activity_create_shelter">CreateShelter</string>
    <string name="title_activity_edit_shelter">EditShelter</string>
    <string name="title_activity_account_management">AccountManagement</string>
    <string name="title_activity_stay_report_history">StayReportHistory</string>
    <string name="title_activity_account_details">AccountDetails</string>
    <string name="title_activity_message_board">MessageBoard</string>
    <string name="title_activity_request_page">RequestPage</string>
    <string name="title_activity_stay_report">StayReport</string>

    <string name="one_bed">1 Bed</string>
    <string name="shelterme">ShelterMe</string>
    <string name="log_out">LOG OUT</string>
    <string name="view_all_shelters">VIEW ALL SHELTERS</string>
    <string name="map_of_nearby_shelters">MAP OF NEARBY SHELTERS</string>
    <string name="check_out_from_current_shelter_stay">CHECK OUT FROM CURRENT SHELTER STAY</string>
    <string name="display_locked_accounts">Display locked accounts</string>
    <string name="name">Name</string>
    <string name="address_hint">Address</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="restrictions_hint">Restrictions</string>
    <string name="capacity_hint">Capacity</string>
    <string name="create_hint">Create</string>
    <string name="reservation_rules_check">By checking, I hearby declare that I have read and agreed to the Rules and Agreements of this shelter.</string>
    <string name="account_status_locked">Account Status: Locked</string>
    <string name="account_status_unlocked">Account Status: Unlocked</string>

</resources>
