<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidDomInspection -->
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.gatech.cs2340.shelterme.controllers.CreateShelter">

    <EditText
        android:id="@+id/Title"
        android:layout_width="373dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="                            Create Shelter"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="3dp"
        tools:ignore="HardcodedText,MissingConstraints" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="93dp"
        tools:ignore="HardcodedText,MissingConstraints" />

    <EditText
        android:id="@+id/inputAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/address_hint"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="161dp"
        tools:ignore="HardcodedText,MissingConstraints" />

    <EditText
        android:id="@+id/inputPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phone_number_hint"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="232dp"
        tools:ignore="HardcodedText,MissingConstraints,TextFields" />

    <EditText
        android:id="@+id/inputRestriction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/restrictions_hint"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="305dp"
        tools:ignore="HardcodedText,MissingConstraints" />

    <EditText
        android:id="@+id/inputCapacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/capacity_hint"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="378dp"
        tools:ignore="HardcodedText,MissingConstraints" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_hint"
        tools:layout_editor_absoluteX="279dp"
        tools:layout_editor_absoluteY="446dp"
        tools:ignore="HardcodedText,MissingConstraints" />

</android.support.constraint.ConstraintLayout>