<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff00bbbb"
    tools:context="edu.gatech.cs2340.shelterme.controllers.RegistrationPage"
    tools:ignore="Overdraw">

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Spinner
            android:id="@+id/sexSpinner"
            android:layout_width="385dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/DOB"
            android:layout_toEndOf="@+id/DOB"
            android:layout_toRightOf="@+id/DOB"
            tools:layout_editor_absoluteX="-1dp"
            tools:layout_editor_absoluteY="395dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/textView9"
            android:layout_toRightOf="@+id/textView9"
            android:text="@string/new_account_registration"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/fullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/userTypeSpinner"
            android:ems="10"
            android:hint="@string/first_and_last_name"
            android:inputType="textPersonName"
            android:textColor="@android:color/background_light" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/email"
            android:ems="10"
            android:hint="@string/username_or_email"
            android:inputType="textPersonName"
            android:textColor="@android:color/background_light"
            tools:layout_editor_absoluteX="272dp"
            tools:layout_editor_absoluteY="267dp" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/userName"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@android:color/background_light" />

        <EditText
            android:id="@+id/passConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/pass"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="@android:color/background_light" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/securityAnswer"
            android:layout_toEndOf="@+id/DOB"
            android:layout_toRightOf="@+id/DOB"
            android:text="@string/sex"
            android:textColor="@android:color/background_light" />

        <Spinner
            android:id="@+id/securityQuestionSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView8" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView9"
            android:layout_alignStart="@+id/textView9"
            android:layout_below="@+id/passConfirm"
            android:text="@string/security_question"
            android:textColor="@android:color/background_light" />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/fullName"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/background_light" />

        <EditText
            android:id="@+id/securityAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/securityQuestionSpinner"
            android:ems="10"
            android:hint="@string/answer"
            android:inputType="textPersonName"
            android:textColor="@android:color/background_light" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/securityAnswer"
            android:text="@string/date_of_birth"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:text="@string/submit" />

        <Spinner
            android:id="@+id/userTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView10" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/account_type"
            android:textColor="@android:color/background_light" />

        <EditText
            android:id="@+id/DOB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView9"
            android:ems="10"
            android:hint="@string/mm_yyyy"
            android:inputType="date"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/submitButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/cancel"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            tools:ignore="ButtonOrder" />

        <Spinner
            android:id="@+id/shelterSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView11" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/securityAnswer"
            android:text="Place of Work"
            android:textColor="@android:color/background_light"
            tools:ignore="HardcodedText" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
