<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff00bbbb"
    tools:context="edu.gatech.cs2340.shelterme.controllers.AccountDetails">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/textView17"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:text="        Account Details"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appBarLayout2" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="317dp"
        android:layout_height="18dp"
        android:text="Username:"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="70dp" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="317dp"
        android:layout_height="39dp"
        android:text="@string/username_or_email"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="88dp" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="317dp"
        android:layout_height="19dp"
        android:text="Password:"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="136dp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="317dp"
        android:layout_height="38dp"
        android:text="@string/password"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="156dp" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="83dp"
        android:layout_height="43dp"
        android:text="Lock"
        tools:layout_editor_absoluteX="285dp"
        tools:layout_editor_absoluteY="508dp" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:text="Gender:"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="205dp" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="317dp"
        android:layout_height="39dp"
        android:text="@string/sex"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="225dp" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:text="Age:"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="274dp" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="317dp"
        android:layout_height="39dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="292dp" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:text="Family:"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="346dp" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="317dp"
        android:layout_height="43dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="365dp" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:text="Veteran Status:"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="418dp" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="317dp"
        android:layout_height="38dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="437dp" />

</android.support.constraint.ConstraintLayout>
